refactoring icon alignment issue

--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -27,7 +27,7 @@
     margin-left: 130px; */
     color: white;
     font-size: 3rem;
-    justify-content: center;
+    text-align: center;
 } 
 
 .emhead {
